rendered/envs/alpha/vmks/ingressroute-victoria-metrics-protected.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: victoria-metrics-protected
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`victoria-metrics.zebradil.dev`) || Host(`victoria-metrics.gray.zebradil.dev`) || Host(`victoria-metrics.junior.zebradil.dev`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
      services:
        - name: vmsingle-vmks-victoria-metrics-k8s-stack
          port: http
